--- a/index.html
+++ b/index.html
@@ -6,10 +6,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bristy Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
-   
+    <section>
+        <div class="half-width">
+            <h1>Wellcome To</h1>
+            <h1><span class="orange-color">Second Website</span> Test</h1>
+            <h3>Build New Website</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta impedit cum consectetur odio ipsam enim corrupti facilis quis, asperiores quisquam.</p>
+            <a href="https://web.programming-hero.com/web-5/video/web-5-4-5-put-container-side-by-side-image-size-link-button-style">Subscribed</a>
+        </div>
+        <div class="half-width">
+            <div >
+            <img src="img png/tupi photo.png" alt="">
+        </div>
+    </section>
+    
+    
 </body>
 </html>
